<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">
    <!--android:background="#dcd9c6"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/american_domino"
        android:layout_gravity="center"
        android:textColor="#4f8452"
        android:textSize="40dp"
        android:layout_marginTop="10dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    android:paddingBottom="10dp">
    <EditText

        android:id="@+id/player_one"
        android:hint="@string/player_one_edit_text"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:layout_height="50dp"
        android:layout_width="317dp"
        android:textColor="#4f8452"
        android:textColorHint="#4f8452"
        android:textSize="20dp" />
    <!--/>        android:focusable="false" />-->

    <EditText

        android:id="@+id/player_two"
        android:hint="@string/player_two_edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:layout_height="50dp"
        android:layout_width="317dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="#4f8452"
        android:textColorHint="#4f8452"
        />

    <EditText
        android:id="@+id/player_three"
        android:hint="@string/player_three_edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:layout_height="50dp"
        android:layout_width="317dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="#4f8452"
        android:textColorHint="#4f8452"/>

    <EditText

        android:id="@+id/player_four"
        android:hint="@string/player_four_edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_width="317dp"
        android:textAlignment="center"
        android:textColor="#4f8452"
        android:textColorHint="#4f8452"/>

</LinearLayout>

    <Button
        android:text="@string/next_button"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/nxtBtn"
        android:textAllCaps="false"
        android:textColor="#4f8452"
        android:background="@drawable/edit_text_background"

        android:textSize="40dp"/>
</LinearLayout>